// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportTranslationResultsPanelSuccess renders closed (default) 1`] = `
<DocumentFragment>
  <div
    class="panel"
  >
    <button
      aria-controls="clay-id-1"
      aria-expanded="false"
      class="panel-header panel-header-link collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      type="button"
    >
      <div
        class="h4 mb-0 text-success"
      >
        <span
          class="mr-2"
        >
          <svg
            class="lexicon-icon lexicon-icon-check-circle-full"
            role="presentation"
          >
            <use
              href="#check-circle-full"
            />
          </svg>
        </span>
        All Files Published
      </div>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      aria-labelledby="clay-id-1"
      class="panel-collapse collapse"
      id="clay-id-1"
      role="region"
    >
      <div
        class="panel-body"
      >
        <ul
          class="list-group list-group-no-bordered mb-0 show-quick-actions-on-hover"
        >
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-ar_SA.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-ca_ES.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-de_DE.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-es_ES.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-fi_FI.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-fr_FR.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-hu_HU.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-ja_JP.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-nl_NL.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-pt_BR.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-sv_SE.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-zh_CN.xlf
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImportTranslationResultsPanelSuccess renders expanded 1`] = `
<DocumentFragment>
  <div
    class="panel"
  >
    <button
      aria-controls="clay-id-2"
      aria-expanded="true"
      class="panel-header panel-header-link collapse-icon collapse-icon-middle show btn btn-unstyled"
      type="button"
    >
      <div
        class="h4 mb-0 text-success"
      >
        <span
          class="mr-2"
        >
          <svg
            class="lexicon-icon lexicon-icon-check-circle-full"
            role="presentation"
          >
            <use
              href="#check-circle-full"
            />
          </svg>
        </span>
        All Files Published
      </div>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      aria-labelledby="clay-id-2"
      class="panel-collapse"
      id="clay-id-2"
      role="region"
    >
      <div
        class="panel-body"
      >
        <ul
          class="list-group list-group-no-bordered mb-0 show-quick-actions-on-hover"
        >
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-ar_SA.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-ca_ES.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-de_DE.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-es_ES.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-fi_FI.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-fr_FR.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-hu_HU.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-ja_JP.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-nl_NL.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-pt_BR.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-sv_SE.xlf
            </p>
          </li>
          <li
            class="list-group-item"
          >
            <p
              class="list-group-title"
            >
              filename-en_US-zh_CN.xlf
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
